Dark Mode bug is solved

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@
 }
 
 .formDarkMode {
-	@apply bg-gray-500 text-white;
+	@apply bg-red-500 text-white;
 }
 
 .footerGrid {
